<resources>
    <string name="app_name">arprastAndroid</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">ari.prasetiyo</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_maps">Maps</string>
    <string name="menu_twitter">Twitter</string>
    <string name="menu_facebook">Facebook</string>
    <string name="menu_instagram">Instagram</string>
    <string name="menu_youtube">Youtube</string>
    <string name="menu_account">Accounts</string>
    <color name="whiteColor">#ffffff</color>
    <color name="grayColor">#A1FFFFFF</color>
    <color name="hintColor">#B1B1B1</color>
    <color name="rowBg">#E4E4E4</color>
    <color name="movieTitle">#797979</color>
    <color name="yearTitle">#CC8BDA</color>
    <color name="rateTitle">#CFC767</color>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
